[gd_scene load_steps=18 format=3 uid="uid://45yjn0kq4krt"]

[ext_resource type="Script" path="res://Scripts/BulletStuff/homing_missile.gd" id="1_6r6qy"]
[ext_resource type="PackedScene" uid="uid://wja8hp8m0buw" path="res://Scenes/Component/hitbox_component.tscn" id="2_6aw67"]
[ext_resource type="PackedScene" uid="uid://dhppob31bvgco" path="res://Scenes/Particles/engine_fire.tscn" id="2_uosre"]
[ext_resource type="PackedScene" uid="uid://chia8b5acjtar" path="res://Scenes/Component/health_component.tscn" id="3_uue0l"]
[ext_resource type="Texture2D" uid="uid://k1l53dgcbol2" path="res://Assets/Texture/Bullet/missile_sheet.png" id="3_xfq0e"]
[ext_resource type="PackedScene" uid="uid://ng2tggihhdpm" path="res://Scenes/Particles/explosion.tscn" id="4_vbf85"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xf3yf"]
atlas = ExtResource("3_xfq0e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tseqs"]
atlas = ExtResource("3_xfq0e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m6by"]
atlas = ExtResource("3_xfq0e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojvj8"]
atlas = ExtResource("3_xfq0e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htwm7"]
atlas = ExtResource("3_xfq0e")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e51u"]
atlas = ExtResource("3_xfq0e")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o5kgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf3yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tseqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m6by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojvj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htwm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e51u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ifblc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_b0rdm"]
resource_name = "vibrate"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kp5cb"]
_data = {
"RESET": SubResource("Animation_ifblc"),
"vibrate": SubResource("Animation_b0rdm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7i3sd"]
size = Vector2(13, 10)

[node name="HomingMissile" type="Node2D"]
script = ExtResource("1_6r6qy")

[node name="FireEffect" parent="." instance=ExtResource("2_uosre")]
position = Vector2(-13, 0)
amount = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o5kgm")
frame_progress = 0.0662416
speed_scale = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kp5cb")
}

[node name="HealthComponent" parent="." instance=ExtResource("3_uue0l")]
max_hp = 2.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health") instance=ExtResource("2_6aw67")]
collision_layer = 2
health = NodePath("../HealthComponent")
destroy_effect = ExtResource("4_vbf85")
destroy_on_impact = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_7i3sd")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="zero_hp" from="HealthComponent" to="." method="_on_health_component_zero_hp"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
